<resources>
    <string name="app_name">Hotel App</string>
    <string name="txtWelcome">Welcome to Hotel App!</string>
    <string name="btnViewHotelList">View list of hotels</string>
    <string name="txtHotelId">Hotel ID:</string>
    <string name="txtHotelName">Hotel Name:</string>
    <string name="txtHotelCity">Hotel City:</string>
    <string name="txtHotelState">Hotel State:</string>
    <string name="txtHotelCostPerDay">Hotel Stay Cost Per Day:</string>
    <string name="btnUpdate">Update</string>
    <string name="hintStayCostPerDay">Enter new Stay Cost Per Day</string>
    <string name="btnUpdateCost">Update Cost</string>
    <string name="btnHome">Home</string>
</resources>
