<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HotelUpdateActivity">

    <TextView
        android:id="@+id/txtHotelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtHotelName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHotelId" />

    <TextView
        android:id="@+id/txtHotelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/txtHotelId"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUpdateCost"
        android:layout_width="185dp"
        android:layout_height="68dp"
        android:layout_marginTop="48dp"
        android:text="@string/btnUpdateCost"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStayCostPerDay" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="186dp"
        android:layout_height="71dp"
        android:layout_marginTop="40dp"
        android:text="@string/btnHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateCost" />

    <EditText
        android:id="@+id/txtStayCostPerDay"
        android:layout_width="263dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/hintStayCostPerDay"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHotelName" />
</androidx.constraintlayout.widget.ConstraintLayout>